# practic10.2

./: pyproject.toml
src/: calculate_taxes.py
tests/: test_calculate_taxes.py
